[workspace]
resolver = "2"
members = [
	"embedded-devices",
	"embedded-devices-derive",
	"embedded-registers",
	"embedded-registers-derive",
]
exclude = [
	"examples"
]

[workspace.package]
version = "0.9.11"
authors = ["oddlama <oddlama@oddlama.org>"]
homepage = "https://github.com/oddlama/embedded-devices"
repository = "https://github.com/oddlama/embedded-devices"
categories = ["embedded", "no-std", "hardware-support", "asynchronous"]
license = "MIT OR Apache-2.0"
