[workspace]
resolver = "2"
members = [
    "embedded-devices",
    "embedded-devices-derive",
	"embedded-interfaces",
	"embedded-interfaces-codegen",
]

[workspace.package]
version = "0.10.2"
authors = ["oddlama <oddlama@oddlama.org>"]
homepage = "https://github.com/oddlama/embedded-devices"
repository = "https://github.com/oddlama/embedded-devices"
categories = ["embedded", "no-std", "hardware-support", "asynchronous"]
license = "MIT OR Apache-2.0"
