[package]
name = "embedded-devices"
edition = "2024"
description = "Device driver implementations for many embedded sensors and devices"
documentation = "https://docs.rs/embedded-devices"
keywords = ["sensor", "embedded", "device", "driver", "peripheral"]
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
approx = { version = "0.5.1", default-features = false }
bondrewd = { version = "0.1.14", default-features = false, features = ["derive"] }
bytemuck = { version = "1.22.0", features = ["derive", "min_const_generics"] }
defmt = "1.0.1"
embedded-hal = "1.0.0"
embedded-hal-async = { version = "1.0.0", optional = true }
embedded-devices-derive = { version = "0.9.13", path = "../embedded-devices-derive" }
embedded-registers = { version = "0.9.13", path = "../embedded-registers", default-features = false, features = ["derive"] }
maybe-async-cfg = "0.2.5"
paste = "1.0.15"
# uom = { version = "0.36.0", features = ["f32", "f64", "si", "rational32", "rational64"], default-features = false }
# uom = { git = "https://github.com/iliekturtles/uom", rev = "b64af636bdff2119e5f1e0e5ad5206a326403e79", features = ["f32", "f64", "si", "rational32", "rational64"], default-features = false }
uom = { git = "https://github.com/iliekturtles/uom", rev = "b64af636bdff2119e5f1e0e5ad5206a326403e79", features = ["f64", "si"], default-features = false }
crc = "3.2.1"

[features]
default = ["sync", "async"]

sync = ["embedded-registers/sync"]
async = ["dep:embedded-hal-async", "embedded-registers/async"]
std = []

# Feature flags to enable supported devices

# Analog Devices
analog_devices-max31865 = []

# Bosch
bosch-bme280 = []
bosch-bmp280 = ["bosch-bme280"]
bosch-bmp390 = []

# Microchip
microchip-mcp9808 = []
microchip-mcp3204 = []
microchip-mcp3208 = []

# Texas Instrument
texas_instruments-ina219 = []
texas_instruments-ina226 = []
texas_instruments-ina228 = []
texas_instruments-tmp102 = []
texas_instruments-tmp117 = []

# Sensirion
sensirion-scd4x = []

[package.metadata.docs.rs]
all-features = true
