[package]
name = "embedded-devices"
edition = "2024"
description = "Device driver implementations for many embedded sensors and devices"
documentation = "https://docs.rs/embedded-devices"
keywords = ["sensor", "embedded", "device", "driver", "peripheral"]
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
approx = { version = "0.5.1", default-features = false }
bytemuck = { version = "1.23.1", features = ["derive", "min_const_generics"] }
defmt = { version = "1.0", optional = true }
embedded-hal = "1.0.0"
embedded-hal-async = { version = "1.0.0", optional = true }
embedded-interfaces = { version = "0.10.1", path = "../embedded-interfaces", default-features = false }
embedded-devices-derive = { version = "0.10.1", path = "../embedded-devices-derive" }
maybe-async-cfg = "0.2.5"
paste = "1.0.15"
uom = { version = "0.37.0", features = ["f64", "si"], default-features = false }
# uom = { git = "https://github.com/iliekturtles/uom", rev = "b64af636bdff2119e5f1e0e5ad5206a326403e79", features = ["f64", "si"], default-features = false }
crc = "3.3.0"
thiserror = { version = "2.0.12", default-features = false }
heapless = "0.8.0"
log = { version = "0.4", optional = true }

[features]
default = ["sync", "async"]

sync = ["embedded-interfaces/sync"]
async = ["dep:embedded-hal-async", "embedded-interfaces/async"]
defmt = ["dep:defmt"]
std = ["thiserror/std", "embedded-interfaces/std"]
# Enables logging for this library
log = ["dep:log"]
# Trace-log all device communication. This is a feature intended for debugging only!
# This has a heavy performance hit and no safety guarantees. Don't use this in production.
trace-communication = ["std", "log", "embedded-interfaces/trace-communication"]

# Feature flags to enable all supported devices
all-devices = [
	"analog_devices-max31865",
	"bosch-bme280",
	"bosch-bmp280",
	"bosch-bmp390",
	"microchip-mcp9808",
	"microchip-mcp3204",
	"microchip-mcp3208",
	"texas_instruments-ina219",
	"texas_instruments-ina226",
	"texas_instruments-ina228",
	"texas_instruments-tmp102",
	"texas_instruments-tmp117",
	"sensirion-scd40",
	"sensirion-scd41",
	"sensirion-scd43",
	"sensirion-sen60",
	"sensirion-sen63c",
	"sensirion-sen65",
	"sensirion-sen66",
	"sensirion-sen68",
]

# Analog Devices
analog_devices-max31865 = []

# Bosch
bosch-bme280 = []
bosch-bmp280 = ["bosch-bme280"]
bosch-bmp390 = []

# Microchip
microchip-mcp9808 = []
microchip-mcp3204 = []
microchip-mcp3208 = []

# Texas Instrument
texas_instruments-ina219 = []
texas_instruments-ina226 = []
texas_instruments-ina228 = []
texas_instruments-tmp102 = []
texas_instruments-tmp117 = []

# Sensirion
sensirion-scd40 = []
sensirion-scd41 = []
sensirion-scd43 = []
sensirion-sen60 = []
sensirion-sen63c = []
sensirion-sen65 = []
sensirion-sen66 = []
sensirion-sen68 = []

[package.metadata.docs.rs]
all-features = true
