[package]
name = "embedded-registers-derive"
edition = "2024"
description = "Procedural macro for effortless definitions of registers in embedded device drivers"
documentation = "https://docs.rs/embedded-registers-derive"
keywords = ["register", "registers", "bitfield", "derive", "sensor"]
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
bondrewd = { version = "0.1.14", default-features = false, features = ["derive"] }
bytemuck = { version = "1.22.0", features = ["derive", "min_const_generics"] }
darling = "0.20.11"
defmt = "1.0.1"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-registers = { path = "../embedded-registers" }
