[package]
name = "embedded-registers"
edition = "2024"
description = "Procedural macro for effortless definitions of registers in embedded device drivers"
documentation = "https://docs.rs/embedded-registers"
keywords = ["register", "registers", "bitfield", "derive", "sensor"]
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
bondrewd = { version = "0.1.14", default-features = false, features = ["derive"] }
bytemuck = { version = "1.16.3", features = ["derive", "min_const_generics"] }
defmt = "0.3.8"
embedded-hal = "1.0.0"
embedded-hal-async = { version = "1.0.0", optional = true }
embedded-registers-derive = { version = "0.9.12", path = "../embedded-registers-derive", optional = true }
maybe-async-cfg = "0.2.4"

[features]
default = ["derive", "sync", "async"]

sync = []
async = ["dep:embedded-hal-async"]
derive = ["dep:embedded-registers-derive"]
std = []
