[package]
name = "embedded-registers-derive"
edition = "2021"
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"
darling = "0.20.3"
bondrewd = { version = "0.1.14", default_features = false, features = ["derive"] }
defmt = "0.3.5"

[dev-dependencies]
embedded-registers = { version = "1.0.0", path = "../embedded-registers", features = ["derive"] }
