[package]
name = "embedded-registers"
edition = "2021"
documentation = "https://docs.rs/embedded-registers"
version.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
arrayvec = { version = "0.7.4", default-features = false }
embedded-hal = "1.0.0-rc.2"
embedded-hal-async = { version = "1.0.0-rc.2", optional = true }
embedded-registers-derive = { version = "0.9.6", path = "../embedded-registers-derive", optional = true }
maybe-async-cfg = "0.2.3"

[features]
async = ["embedded-hal-async"]
default = ["derive", "async"]
derive = ["embedded-registers-derive"]
std = []
