[package]
name = "tmp102"
edition = "2024"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
embedded-hal = "1.0.0"
linux-embedded-hal = "0.4.0"
embedded-devices = { path = "../../../embedded-devices", default-features = false }
clap = { version = "4.5.23", features = ["derive"] }
uom = { version = "0.36.0", features = ["autoconvert"] }
